# brain-atlas

./: .gitignore  .pre-commit-config.yaml  Dockerfile_hail  LICENSE  README.md  environment.yml  hail_environment.yml  setup.cfg  setup.py
clustering/: pyproject.toml
clustering/src/brain_atlas/: __init__.py  find_genes.py  gene_selection.py  leiden.py  neighbors.py
clustering/src/brain_atlas/scripts/: filter_mt.py  gcs_to_zarr.py  make_zarr.py  subcluster.py
clustering/src/brain_atlas/util/: dataset.py
figures/: README.md
figures/main_figures/: 00_Notes_For_Install.md  01_Prelude.R  D13_Cortex.forExport.Rmd  R_sf_environment.asinstalled.withVersions.yaml  fig3.R  fig4.R  fig5.R
src/brain_atlas/: __init__.py  diff_exp.py  find_genes.py  gene_selection.py  jaccard.py  leiden.py  leiden_tree.py  neighbors.py
src/brain_atlas/hail/: Dockerfile_hail  HAIL.md  client.py  hail.py  hail_environment.yml
src/brain_atlas/plot/: __init__.py  confusion.py
src/brain_atlas/scripts/: __init__.py  filter_mt.py  find_genes.py  gcs_to_zarr.py  hail.py  hail_de_runner.py  leiden.py  make_atlas_zarr.py  make_zarr.py  query.py  subcluster.py  subcluster_p.py
src/brain_atlas/util/: __init__.py  dataset.py  gcp.py  h5.py  tree.py
src/brain_atlas/util/hail_batch/: README.md  hail_diffexp_coach.py
src/brain_atlas/util/hail_batch/13_precalc_for_hail/: 00_Notes  01_list_of_files  hail_diffexp_runner.py
src/brain_atlas/util/hail_batch/14_hail_docker/: .gitignore  Dockerfile  getProgress.sh  getcpu.sh
src/mouse_brain_atlas/: gene_selection.py
