[metadata]
name = brain-atlas
version = attr: brain_atlas.__version__
description = Tools for analyzing the mouse brain atlas data
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    Click
    PyYAML
    dask
    dask-ml
    distributed
    gcsfs
    google-api-python-client
    google-auth
    h5py
    leidenalg
    matplotlib
    numba
    numpy
    pandas
    pyarrow
    pynndescent
    scipy
    sparse
    zarr

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    atlas = brain_atlas.scripts.__init__:cli

[options.extras_require]
dev = black; isort; flake8; pre-commit
macosko = google-cloud-secret-manager; openpyxl

[flake8]
max-line-length = 88
exclude = .tox,.git,venv
ignore = E203, E231, E501, W503
